<resources>
    <string name="app_name">Ronin Chat</string>
    <string name="bottom_nav_title_messages">Messages</string>
    <string name="bottom_nav_title_channels">Channels</string>
    <string name="bottom_nav_title_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="instance_url">instanceURL</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="search_for_people">Search for people</string>
    <string name="new_message">New Message</string>
    <string name="search_for_channels">Search for channels</string>
    <string name="new_channel">New Channel</string>
    <string name="channels_are_viewable_by_everyone">Channels are viewable by everyone</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="link_gravatar">Link Gravatar</string>
    <string name="environment">Environment</string>
    <string name="version">Version</string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="loading">Loading&#8230;</string>
    <string name="type_your_message">Type your message</string>
    <string name="group_details">Group Details</string>
    <string name="channel">Channel</string>
    <string name="group_name">Group Name</string>
    <string name="channel_name">Channel Name</string>
    <string name="dual_string_placeholder">%s %s</string>
</resources>
