<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include
        android:id="@+id/topToolbar"
        layout="@layout/toolbar_top_cancel" />

    <TextView
        android:id="@+id/tvNewChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topToolbar"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/new_channel"
        android:textColor="@color/colorPrimary"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNewChannelInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNewChannel"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/channels_are_viewable_by_everyone"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/llChannelNameContainer"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNewChannelInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp">

        <EditText
            android:id="@+id/etChannelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llChannelNameContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/etChannelDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/description"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>
</RelativeLayout>